--- a/app/src/main/res/layout/friends_layout.xml
+++ b/app/src/main/res/layout/friends_layout.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-
+    android:foreground="@drawable/shape_window_dim"
     android:paddingTop="@dimen/activity_vertical_margin"
 
     tools:context="group9.android_project.FriendsActivity">
@@ -21,7 +21,6 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:text="+"
-
         android:background = "@drawable/roundcorner"
         android:id="@+id/btnFriendsAddFriends"
         android:layout_alignParentBottom="true"
@@ -31,26 +30,10 @@
         android:textSize="30sp"
         android:textColor="@drawable/btntxtcolor"/>
 
-    <ScrollView
-        android:layout_below="@+id/labelFriends"
-        android:layout_width="fill_parent"
+    <ListView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/scrollViewFriends"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:fillViewport="false">
-
-        <LinearLayout
-            android:layout_below="@+id/labelHomeFriends"
-            android:orientation="vertical"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:id="@+id/friendsLayout"
-            android:gravity="center">
-
-
-        </LinearLayout>
-
-    </ScrollView>
+        android:id="@+id/lvUsers"
+        android:layout_below="@+id/labelFriends" />
 
 </RelativeLayout>
