--- a/app/src/main/res/layout/addmedia_layout.xml
+++ b/app/src/main/res/layout/addmedia_layout.xml
@@ -41,7 +41,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="FilePath"
+                android:text=""
                 android:id="@+id/tvFilepath" />
 
         </LinearLayout>
@@ -57,18 +57,20 @@
             android:layout_height="wrap_content"
             android:gravity="center|center_horizontal">
 
-            <Button
+            Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Cancel"
                 android:id="@+id/btnCancel" />
 
             <Button
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Add"
+                android:text="Add file"
                 android:id="@+id/btnConfirmVacation"
-                android:backgroundTint="#FF70BA78" />
+                android:backgroundTint="#FF70BA78"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp" />
         </LinearLayout>
 
     </LinearLayout>
