--- a/app/src/main/res/layout/main_layout.xml
+++ b/app/src/main/res/layout/main_layout.xml
@@ -14,14 +14,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Firstname Lastname"
             android:id="@+id/tvName" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Username"
             android:id="@+id/tvUsername" />
 
     </LinearLayout>
@@ -55,6 +53,23 @@
         </LinearLayout>
 
     </TabHost>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:padding="15dp"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:drawableStart="@android:drawable/ic_menu_preferences"
+            android:id="@+id/btnSettings"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_gravity="right" />
+
+    </LinearLayout>
+
 </RelativeLayout>
 
 
